--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <p class="loginSub">Connexion Google obligatoire.<br>Accès uniquement si ton email est autorisé.</p>
 
     <div id="g_id_onload"
-         data-client_id="REMPLACE_MOI_CLIENT_ID"
+         data-client_id="690765229829-9bbdccrsm9dd8c1sj01k06bqsdna3hgs.apps.googleusercontent.com"
          data-callback="handleCredentialResponse">
     </div>
 
